--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,40 @@ body {
 .brand {
     width: 25%;
 }
+
 .bg {
 display: flex;
+}
 
+.model-sum {
+    margin: 20px;
+    border: 8px solid #88fffb30;
+    border-radius: 20px;
+    width: 300px;
+    height: 340px;
+    background-color:#6f6f6f30;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+
+button {
+    width: 160px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    color: #cccccc;
+    background: green;
+    font-weight: 600;
+    font-size: large;
+    cursor: pointer;
+}
+
+h2 {
+    color:#dddddd;
+    padding: 0;
+    margin: 0;
 }
